# enumx

./: Cargo.toml  README.md
book/src/: SUMMARY.md  ad-hoc-enums.md  cex-as-dyn-std-error.md  cex-as-impl-trait.md  cex-backtrace.md  cex-to-crate-error.md  cex-typat.md  cex.md  contextual-macros.md  enums-external-to-fn.md  exchange-trait.md  exchange.md  impl-traits-for-enums.md  intro.md  multiple-sum.md  predefined-macros.md  predefined.md  result-macro.md  ret-throw-macros.md  sum.md  sum_err.md  tagged-variant.md  trait-annotation.md  typat.md  user-defined.md
cex/: Cargo.toml  README.md  use-cex-to-keep-local-errors-from-being-propagated-by-try-operator.md
cex/src/: dyn_err.rs  lib.rs  log.rs  result.rs  test.rs
cex/src/test/: adhoc.rs  cex_tag.rs  demo.rs  env_opt_logging.rs  logged.rs  map_dyn_err.rs  named.rs  sugar.rs  wrapping_errors.rs
cex/tests/: syntax.rs  use_cex_to_keep_local_errors_from_being_propagated_by_try_operator.rs
cex_derive/: Cargo.toml  README.md
cex_derive/src/: lib.rs
cex_test/: Cargo.toml
cex_test/src/: lib.rs
enumx/: Cargo.toml  README.md  build.rs
enumx/src/: deref17_32.rs  deref1_16.rs  enum17_32.rs  enum17_enum32.rs  enum1_16.rs  enum_macro_1_16.rs  enum_macro_1_32.rs  enum_variant17_32.rs  enum_variant1_16.rs  into_enum17_32.rs  into_enum2_16.rs  lib.rs  macros.rs  sum17_32.rs  sum1_16.rs
enumx/tests/: macro_inheritance.rs  syntax.rs
enumx_derive/: Cargo.toml  README.md
enumx_derive/src/: lib.rs
enumx_test/: Cargo.toml
enumx_test/src/: lib.rs
