[package]
name = "cex"
version = "0.4.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "exception", "error", "throws", "log", "backtrace" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/cex"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Combinators of EnumX, for error-handling"

[dependencies.enumx]
version = "^0.3.1"

[dependencies.cex_derive]
version = "0.4"

[features]
log = []
env_log = []
pretty_log = []
