[package]
name = "cex"
version = "0.5.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "exception", "error", "throws", "log", "backtrace" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/cex"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Combinators of EnumX, for error-handling"

[dependencies.enumx]
version = "0.4"
path = "../enumx"

[dependencies.cex_derive]
version = "0.5"
path = "../cex_derive"

[features]
log = []
env_log = []
pretty_log = []
enum32 = ["enumx/enum32"]
