[package]
name = "cex"
version = "0.5.2"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "exception", "error", "throws", "ad-hoc", "anonymous" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/cex"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Checked exception simulation."

[dependencies.enumx]
version = "^0.4.1"
path = "../enumx"

[dependencies.cex_derive]
version = "^0.5.2"
path = "../cex_derive"

[features]
log = []
env_log = []
pretty_log = []
enum32 = ["enumx/enum32"]
unstable = []
