[package]
name = "cex_derive"
version = "0.5.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "exception", "error", "throws", "log", "backtrace" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/cex_derive"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Combinators of EnumX, for error-handling"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit-mut"] }
indexmap = "1.4"
