[package]
name = "cex_derive"
version = "0.5.2"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "exception", "error", "throws", "ad-hoc", "anonymous" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/cex_derive"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Macros for checked exception simulation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit-mut"] }
indexmap = "1.4"
