[package]
name = "enumx"
version = "0.2.1"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "enum", "anonymous", "union", "sum", "ad-hoc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/enumx"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Anonymous enum in Rust."

[dev-dependencies]
enumx_derive = "^0.2.1"

[features]
enum32 = []
