[package]
name = "enumx"
version = "0.3.0-alpha"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "enum", "anonymous", "union", "sum", "ad-hoc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/enumx"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Structural enum implemented in enum exchange."

[dev-dependencies]
enumx_derive = "^0.3.0-alpha"
