[package]
name = "enumx"
version = "0.4.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "enum", "anonymous", "structural", "sum", "ad-hoc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/enumx"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Structural enum implemented in enum exchange."

[dependencies.enumx_derive]
version = "0.4"
path = "../enumx_derive"

[features]
default = ["enum16"]
enum16 = []
enum32 = []
unstable = []
