[package]
name = "enumx_derive"
version = "0.3.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "enum", "anonymous", "structural", "sum", "ad-hoc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/enumx_derive"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Structural enum implemented in enum exchange."

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = "0.15"
