[package]
name = "enumx_derive"
version = "0.4.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT"
keywords = [ "enum", "anonymous", "structural", "sum", "ad-hoc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/enumx"
documentation = "https://docs.rs/enumx_derive"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Macros for ad-hoc enum extension"

[lib]
proc-macro = true

[dependencies]
indexmap = "1.4"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit","visit-mut"] }
